--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,78 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+
+<div class="header">
+  <h1>Header</h1>
+</div>
+
+<div>
+    <% if current_user %>
+        <div class="topnav">
+            <div class="icon">
+                <a href="#">Link</a>
+            </div>
+
+            <div class="iteam">
+                <a href="" >Link</a>
+                <a href="">Link </a>
+                <a href="">Link</a>
+            </div>
+        </div>
+            <%= link_to "Sign out", destroy_user_session_path, 'data-turbo-method': :delete %>
+    <% else %>
+        <div class="topnav">
+            <div class="icon">
+                <a href="#">Link</a>
+            </div>
+
+            <div class="iteam">
+                <a href="/users/sign_up" >Sing up</a>
+                <a href="/users/sign_in">Login </a>
+            </div>
+        </div>
+        <div class="image">
+            <h1>image</h1>
+        </div>
+        <%= render 'landing' %>
+<% end %>
+</div>
+
+<style>
+.header {
+  background-color: #0e1112;
+  padding: 20px;
+  text-align: center;
+  color: #7494a3;
+}
+.image{
+  background-color: #f1f1f1;
+  padding: 20px;
+  text-align: center;
+}
+
+
+.topnav {
+  overflow: hidden;
+  background-color: #cc3e44;
+  display: flex;
+  justify-content: space-between;
+  overflow: hidden;
+
+}
+
+
+.topnav a {
+  display: flex;
+  color: #519aba;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+.icon, .iteam{
+  display:flex;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+</style>
