change the font color

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -53,6 +53,7 @@
   overflow: hidden;
   background-color: #cc3e44;
   display: flex;
+  
   justify-content: space-between;
   overflow: hidden;
 
@@ -61,10 +62,10 @@
 
 .topnav a {
   display: flex;
-  color: #519aba;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
+  color: #0e1112;
 }
 
 .icon, .iteam{
@@ -72,7 +73,7 @@
 }
 
 .topnav a:hover {
-  background-color: #ddd;
+  background-color: #7494a3;
   color: black;
 }
 </style>
