adit new and update deviser user lastName to last_name

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -8,8 +8,8 @@
   </div>
 
   <div class="field">
-    <%= f.label :lastName %><br />
-    <%= f.text_field :lastName, autofocus: true, autocomplete: "last name" %>
+    <%= f.label :last_name %><br />
+    <%= f.text_field :last_name, autofocus: true, autocomplete: "last name" %>
   </div>
 
   <div class="field">
