styling generic landing and navbar

--- a/app/views/application/_landing.html.erb
+++ b/app/views/application/_landing.html.erb
@@ -2,26 +2,32 @@
   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus</p>
     <div class="row">
       <div class="column">
-        <span class="icon" style="font-size: 40px;" >
-          <i class="fas fa-piggy-bank"></i>
-            Save money
-        </span>
+        <div>
+          <span class="icon">
+            <%= image_tag("https://images-leadger-2.s3.amazonaws.com/pig.png", width: 150) %>
+          </span>
+           Save money
+        </div>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque tortor sed accumsan convallis.</p>
       </div>
   
       <div class="column">
-        <span class="icon" style="font-size: 40px;" >
-          <i class="far fa-eye"></i>
-            view metrics
-        </span>
+        <div>
+          <span class="icon">
+            <%= image_tag("https://images-leadger-2.s3.amazonaws.com/metric.png", width: 150) %>
+          </span>
+          view metrics
+        </div>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque tortor sed accumsan convallis.</p>
       </div>
   
       <div class="column">
-        <span class="icon" style="font-size: 40px;" >
-          <i class="fas fa-bell"></i>
-            Create reminders 
-        </span>
+       <div>
+          <span class="icon">
+            <%= image_tag("https://images-leadger-2.s3.amazonaws.com/alarm.png", width: 150) %>
+          </span>
+          Create reminders
+       </div>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque tortor sed accumsan convallis.</p>
       </div>
     </div>
