--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,29 +14,50 @@
  *= require_self
  */
 /* menu */
-.header {
-    background-color: #0e1112;
-    padding: 20px;
-    text-align: center;
-    color: #7494a3;
-  }
+body{
+  background: #0A0216;
+}
 
+.header {
+  background-color: #0A0216;
+  padding: 25px;
+  text-align: left;
+  color: #7494a3;
+}
+
+.line {
+  margin-left: 2%;
+  width: 96%;
+  height: 8px;
+  background-image: linear-gradient(to right, rgb(245, 68, 86), rgb(252, 112, 34), rgb(214, 205, 0), rgb(145, 232, 39), rgb(0, 197, 128), rgb(0, 197, 128), rgb(48, 93, 251), rgb(118, 53, 222), rgb(249, 143, 209));
+}
+
+.pure-menu{
+  background-color: #FAF9FC;
+  text-align: center;
+}
+
+/* landing page */
 .image{
-    background-color: #f1f1f1;
-    padding: 20px;
-    text-align: center;
+  background-color: #0A0216;
+  padding: 20px;
+  text-align: center;
+  height:350px;
+  background-image: url("https://images-leadger-2.s3.amazonaws.com/ASYMETRIC+(1).png");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
 }
   
 .topnav {
-    overflow: hidden;
-    background-color: #cc3e44;
-    display: flex;
-    
-    justify-content: space-between;
-    overflow: hidden;
+  overflow: hidden;
+  background: linear-gradient(70deg, #0A0216, #5f2ab4);
+
+  display: flex;
+  justify-content: space-between;
+  overflow: hidden;
+  padding-left: 10px;
 }
-  
-  
+
 .topnav a {
     display: flex;
     text-align: center;
@@ -46,29 +67,28 @@
 }
   
 .icon, .iteam{
-    display:flex;
+  display:flex;
 }
   
 .topnav a:hover {
-    background-color: #7494a3;
-    color: black;
+  background-color: #FAF9FC;
+  color: black;
 }
 
-/* landing css */
 .content{
-    width:80%;
-    margin-left:auto;
-    margin-right:auto;
+  width:80%;
+  margin-left:auto;
+  margin-right:auto;
+  color: #FAF9FC;
 }
 .column {
   float: left;
   width: 28%;
   padding: 15px;
-  
+  color:#b3a2d6;
 }
 
 .row:after {
-  content: "";
   display: table;
   clear: both;
 }
