--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,7 +3,7 @@
       <p><%= message %></p>
     <% end %>
 </div>  
-<div class="form-register"> 
+<div class="form-content"> 
   <div class="form-child">      
     <%= form_for(resource, as: resource_name,html: {class: "pure-form pure-form-stacked"}, url: registration_path(resource_name)) do |f| %>
       <h2>Sign up</h2>
