--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,7 +1,13 @@
-<h2>Forgot your password?</h2>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+<div class="register-error">
+    <% resource.errors.full_messages.each do |message| %>
+      <p><%= message %></p>
+    <% end %>
+</div>
+<div class="form-content">
+  <div class="form-child">
+<%= form_for(resource,html: {class: "pure-form pure-form-stacked"}, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+  <h2>Forgot your password?</h2>
 
   <div class="field">
     <%= f.label :email %><br />
@@ -9,8 +15,10 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
+    <%= f.submit "Send me reset password",data: {turbo: false}, class:"pure-button pure-button-primary" %>
   </div>
+  <%= render "devise/shared/links" %>
 <% end %>
+</div>
+</div>
 
-<%= render "devise/shared/links" %>
