--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,6 +13,7 @@
  *= require_tree .
  *= require_self
  */
+
 /* menu */
 body{
   background: #0A0216;
@@ -59,11 +60,11 @@ body{
 }
 
 .topnav a {
-    display: flex;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    color: #0e1112;
+  display: flex;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  color: #0e1112;
 }
   
 .icon, .iteam{
@@ -99,7 +100,7 @@ body{
     }
 }  
 
-/* register */
+/* div center */
 
 .form-content{
   display: flex;
