--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -44,7 +44,7 @@ body{
   padding: 20px;
   text-align: center;
   height:350px;
-  background-image: url("https://images-leadger-2.s3.amazonaws.com/ASYMETRIC+(1).png");
+  background-image: url("https://images-leadger-2.s3.amazonaws.com/ASYMETRIC.png");
   background-repeat: no-repeat;
   background-size: 100% 100%;
 }
