--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,10 +13,16 @@
  *= require_tree .
  *= require_self
  */
+/* contetn-login */
+.content_page{
+  padding: 25px;
+  text-align: left;
+}
 
 /* menu */
 body{
   background: #0A0216;
+  color:white;
 }
 
 .header {
