--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -16,7 +16,7 @@
 
 
           <li class="pure-menu-item pure-menu-selected">
-            <a href="#" class="pure-menu-link">Movements</a>
+            <%= link_to "Movements", movements_path, class:"pure-menu-link" %>
           </li>
           <li class="pure-menu-item pure-menu-selected">
             <a href="#" class="pure-menu-link">Notifications</a>
