--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,38 @@
-<%= render 'navbar'%>
+
+<div class="header">
+  <h1>Header</h1>
+</div>
+
+<div>
+  <% if current_user %>
+    <div class="topnav">
+      <div class="icon">
+        <a href="#">Link</a>
+      </div>
+
+      <div class="iteam">
+        <a href="" >Link</a>
+        <a href="">Link </a>
+        <a href="">Link</a>
+      </div>
+    </div>
+    <%= link_to "Sign out", destroy_user_session_path, 'data-turbo-method': :delete %>
+  <% else %>
+    <div class="topnav">
+      <div class="icon">
+        <a href="#">Link</a>
+      </div>
+
+      <div class="iteam">
+        <a href="/users/sign_up" >Sign-up</a>
+        <a href="/users/sign_in">Login </a>
+      </div>
+    </div>
+
+    <div class="image">
+        <h1>image</h1>
+    </div>
+    
+    <%= render 'landing' %>
+  <% end %>
+</div>
