--- a/app/views/movements/_form.html.erb
+++ b/app/views/movements/_form.html.erb
@@ -1,29 +1,26 @@
 <%= form_with(model: movement) do |form| %>
-  <% if movement.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(movement.errors.count, "error") %> prohibited this movement from being saved:</h2>
-
-      <ul>
-        <% movement.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
-
   <div>
     <%= form.label :name, style: "display: block" %>
     <%= form.text_field :name %>
+    <% @movement.errors.full_messages_for(:name).each do |message| %>
+      <div class="content-error"><%= message %></div>
+    <% end %>
   </div>
 
   <div>
     <%= form.label :description, style: "display: block" %>
     <%= form.text_field :description %>
+    <% @movement.errors.full_messages_for(:description).each do |message| %>
+      <div class="content-error"><%= message %></div>
+    <% end %>
   </div>
 
   <div>
     <%= form.label :date, style: "display: block" %>
     <%= form.date_field :date %>
+    <% @movement.errors.full_messages_for(:date).each do |message| %>
+      <div class="content-error"><%= message %></div>
+    <% end %>
   </div>
 
   <div>
