--- a/app/views/movements/index.html.erb
+++ b/app/views/movements/index.html.erb
@@ -1,4 +1,4 @@
-<%= render 'navbar'%>
+<%= render "navbar" %>
 <p style="color: green"><%= notice %></p>
 <div class="content_page">
   <h1>Movements</h1>
@@ -23,6 +23,6 @@
     <div class="pure-g">
       <div class="pure-u-1-3"><h3>Total: <%= @account_balance %></h3></div>
       <div class="pure-u-1-3"><p></p></div>
-      <div class="pure-u-1-3"><%= link_to "New movement", new_movement_path, class:"pure-button pure-button-primary" %></div>
+      <div class="pure-u-1-3"><%= link_to "New movement", new_movement_path, class: "pure-button pure-button-primary" %></div>
     </div>
 </div>
