TableTags movement, delete empty methods of movement controller, create seeds

--- a/app/views/movements/_movement.html.erb
+++ b/app/views/movements/_movement.html.erb
@@ -1,12 +1,14 @@
 <div id="<%= dom_id movement %>">
   <tbody>
     <tr>
-      <td><%= movement.name %></td>
-      <td><%= movement.description %></td>
-      <td><%= movement.date.to_formatted_s(:long) %></td>
-      <td><%= movement.ammount %></td>
-      <td><%= movement.category %></td>
-     <th><%= link_to "Show this movement", movement %></th>
+      <% if movement.present? %>
+        <%= tag.td movement.name %>
+        <%= tag.td movement.description %>
+        <%= tag.td movement.date.to_formatted_s(:long) %>
+        <%= tag.td movement.ammount %>
+        <%= tag.td movement.category %>
+        <%= tag.td link_to "Show this movement", movement %>
+      <% end %>  
     </tr>
   <tbody>
 </div>
