--- a/app/views/movement_categories/_form.html.erb
+++ b/app/views/movement_categories/_form.html.erb
@@ -1,27 +1,20 @@
 <%= form_with(model: movement_category) do |form| %>
-  <% if movement_category.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(movement_category.errors.count, "error") %> prohibited this movement_category from being saved:</h2>
-
-      <ul>
-        <% movement_category.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
-
   <div>
     <%= form.label :name, style: "display: block" %>
     <%= form.text_field :name %>
+    <% @movement_category.errors.full_messages_for(:name).each do |message| %>
+      <div class="content-error"><%= message %></div>
+    <% end %>
   </div>
-
   <div>
     <%= form.label :movement_type_id, style: "display: block" %>
-    <%= form.text_field :movement_type_id %>
+    <%= form.select :movement_type_id, options_from_collection_for_select(MovementType.all, :id, :name) %>
+    <% @movement_category.errors.full_messages_for(:movement_type_id).each do |message| %>
+      <div class="content-error"><%= message %></div>
+    <% end %>
   </div>
-
+  <br/>
   <div>
-    <%= form.submit %>
+    <%= form.submit class: "pure-button pure-button-primary" %>
   </div>
 <% end %>
