--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,6 +13,47 @@
  *= require_tree .
  *= require_self
  */
+/* modal */
+.modal-center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  top: 0;
+  left: 25%;
+  height: 80vh;
+  width: 80vh;
+  opacity: 0.9;
+  backdrop-filter: blur(15px);
+}
+
+.modal {
+  width: 600px;
+  background-color: #faf9fc;
+  max-width: 100%;
+  padding: 30px, 50px;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(252, 0, 0, 0.2);
+  text-align: center;
+  color: #f54456;
+}
+
+.button_border {
+  border-radius: 100%;
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 8px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  left: 60%;
+  bottom: 15px;
+  position: relative;
+  font-size: 14px;
+  cursor: pointer;
+}
+
 /* contetn-login */
 .content_page {
   padding: 25px;
@@ -133,7 +174,7 @@ body {
 
 .form-child {
   background: #faf9fc;
-  width: 22%;
+  width: 35%;
   height: auto;
   color: black;
   padding: 15px;
