--- a/app/views/movement_categories/new.html.erb
+++ b/app/views/movement_categories/new.html.erb
@@ -1,9 +1,12 @@
-
-  <div class="modal-center" id="modal_center">
-    <div class="modal">
-        <h1>New category</h1>
-        <%= render "form", movement_category: @movement_category %>
-        
+<%= render "navbar" %>
+<br/>
+<div class="form-content">
+  <div class="form-child">
+    <h1>New category</h1>
+    <%= render "form", movement_category: @movement_category %>
+    <br>
+    <div>
+      <%= link_to "Back to movement categories", new_movement_path, class: "pure-button pure-button-active" %>
     </div>
   </div>
-
+</div>
