--- a/app/views/movements/new.html.erb
+++ b/app/views/movements/new.html.erb
@@ -1,12 +1,9 @@
 <%= render "navbar" %>
 <br/>
   <div class="form-content">
-    <div class="form-child">
+    <div class="form-child-movement">
       <h1>New movement</h1>
       <%= render "form", movement: @movement %>
       <br>
-    <div>
-      <%= link_to "Back to movements", movements_path %>
-    </div>
   </div>
 </div>
