--- a/app/views/movement_categories/new.html.erb
+++ b/app/views/movement_categories/new.html.erb
@@ -2,7 +2,7 @@
 <br/>
 <div class="form-content">
   <div class="form-child">
-    <h1>New movement category</h1>
+    <h1>New category</h1>
     <%= render "form", movement_category: @movement_category %>
     <br>
     <div>
