--- a/app/views/movements/_form.html.erb
+++ b/app/views/movements/_form.html.erb
@@ -1,38 +1,58 @@
-<%= form_with(model: movement) do |form| %>
-  <div>
-    <%= form.label :name, style: "display: block" %>
-    <%= form.text_field :name %>
+<%= form_with(model: movement, html: { class: "pure-form pure-g" }) do |form| %>
+  <div class="pure-u-1-4">
+    <%= form.label :name, class: "pure-input-1" %>
+  </div>
+  <div class="pure-u-3-4">
+    <%= form.text_field :name, class: "pure-input-1" %>
     <% @movement.errors.full_messages_for(:name).each do |message| %>
       <div class="content-error"><%= message %></div>
     <% end %>
   </div>
-  <div>
-    <%= form.label :description, style: "display: block" %>
-    <%= form.text_field :description %>
+  <div class="pure-u-1-4">
+    <%= form.label :description, class: "pure-input-1" %>
+  </div>
+  <div class="pure-u-3-4">
+    <%= form.text_field :description, class: "pure-input-1" %>
     <% @movement.errors.full_messages_for(:description).each do |message| %>
       <div class="content-error"><%= message %></div>
     <% end %>
   </div>
-  <div>
-    <%= form.label :date, style: "display: block" %>
-    <%= form.date_field :date %>
+  <div class="pure-u-1-4">
+    <%= form.label :date, class: "pure-input-1" %>
+  </div>
+  <div class="pure-u-3-4">
+    <%= form.date_field :date, class: "pure-input-1" %>
     <% @movement.errors.full_messages_for(:date).each do |message| %>
       <div class="content-error"><%= message %></div>
     <% end %>
   </div>
-  <div>
-    <%= form.label :ammount, style: "display: block" %>
-    <%= form.number_field :ammount %>
+  <div class="pure-u-1-4">
+    <%= form.label :ammount, class: "pure-input-1" %>
   </div>
-  <div>
-    <%= form.label :movement_type_id, style: "display: block" %>
-    <%= form.select :movement_type_id, options_from_collection_for_select(MovementType.all, :id, :name) %>
+  <div class="pure-u-3-4">
+    <%= form.number_field :ammount, class: "pure-input-1" %>
   </div>
-  <div>
-    <%= form.label :category, style: "display: block" %>
-    <%= form.text_field :category %>
+  <div class="pure-u-1-4">
+    <p>Movement</p>
   </div>
-  <div>
-    <%= form.submit %>
+  <div class="pure-u-3-4">
+    <%= form.select :movement_type_id, options_from_collection_for_select(MovementType.all, :id, :name), class: "pure-input-1", id: "movement-type" %>
+  </div>
+  <div class="pure-u-1-4">
+    <%= form.label :category, class: "pure-input-1" %>
+  </div>
+  <div class="pure-u-2-5">
+    <%= form.select :category, class: "pure-input-1" %>
+  </div>
+  <div class="pure-u-1-5">
+    <%= link_to "New category", new_movement_category_path, class: "pure-button pure-button-active" %>
+  </div>
+  <div class="pure-u-1-2">
+    <br/>
+    <%= link_to "Back", movements_path, class: "pure-button" %>
+  </div>
+  <div class="pure-u-1-2">
+    <br/>
+    <%= form.submit class: "pure-button pure-button-primary" %>
   </div>
 <% end %>
