--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -11,18 +11,10 @@
       <div class="pure-menu pure-menu-horizontal">
         <ul class="pure-menu-list">
           <li class="pure-menu-item pure-menu-selected">
-            <a href="#" class="pure-menu-link">Home</a>
-          </li>
-
-
-          <li class="pure-menu-item pure-menu-selected">
-            <%= link_to "Movements", movements_path, class:"pure-menu-link" %>
+            <%= link_to "Home", graphics_path, class: "pure-menu-link" %>
           </li>
           <li class="pure-menu-item pure-menu-selected">
-            <a href="#" class="pure-menu-link">Notifications</a>
-          </li>
-          <li class="pure-menu-item pure-menu-selected">
-            <a href="#" class="pure-menu-link">Home</a>
+            <%= link_to "Movements", movements_path, class: "pure-menu-link" %>
           </li>
           <li class="pure-menu-item pure-menu-has-children pure-menu-allow-hover">
             <a href="#" id="menuLink1" class="pure-menu-link">Setting</a>
