--- a/app/views/movements/graphics.html.erb
+++ b/app/views/movements/graphics.html.erb
@@ -15,7 +15,7 @@
   </div>
   <div class="pure-u-2-5">
     <br/>
-    <%= line_chart @income_for_amonth_graph, prefix: "$", thousands: "," %>
+    <%= line_chart @income_movements, prefix: "$", thousands: "," %>
   </div>
   <div class="pure-u-2-5">
     <br/>
