fixing code month

--- a/app/views/movements/graphics.html.erb
+++ b/app/views/movements/graphics.html.erb
@@ -11,7 +11,7 @@
    </div>
   </div>
   <div class="pure-u-3-4">
-    <h4>Result by <%= Date.today.strftime("%B") %> <%= @total_of_mount %> </h4>
+    <h4>Result by <%= Date.today.strftime("%B") %> <%= @total_of_month %> </h4>
   </div>
   <div class="pure-u-2-5">
     <br/>
